[Server] 뉴스 응답 내부에 section, provider 등 메타 정보 포함 (#87)
* add detail info on article api

* modify api docs
